<resources>
    <!--    <string name="app_name">Zotero</string>-->
    <string name="app_name_release">Zotero</string>
    <string name="app_name_debug">Zotero...</string>
    <string name="title_activity_sync_setup">Sync Setup</string>
    <string name="title_activity_zotero_api_setup">Zotero API</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Search</string>
    <string name="search_hint" translatable="false">Search</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="by_title">By Title</string>
    <string name="by_author">By Author</string>
    <string name="by_date">By Date</string>
    <string name="by_date_added">By Date Added</string>

    <string name="external_cache">External Cache</string>
    <string name="custom_path">Custom Path</string>

    <!-- Sync Preferences -->
    <string name="settings">Settings</string>
    <string name="sync_method">Sync Method</string>
    <string name="syncing_header">Syncing</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="library_content_empty_library">This catalog is currently empty.\nPlease refresh your library.</string>
    <string name="sort_method_title">Library Sorting</string>
    <string name="library_header">Library</string>
    <string name="unfiled_items">Unfiled Items</string>
    <string name="my_library">My Library</string>
    <string name="title_activity_web_davsetup">WebDAV Setup</string>
    <string name="loading_library_text">Loading your library</string>
    <string name="setting_sync_attachments_location">Attachments Location</string>
    <string name="title_activity_attachment_manager">Attachment Downloader</string>
    <string name="attachment_manager">Attachment Manager</string>
    <string name="setup_webdav">Setup WebDAV</string>
    <string name="zotero_save">Zotero Save</string>
    <string name="loading_your_library">Loading your library</string>
    <string name="filter">Filter Menu</string>
    <string name="force_resync">Force Resync</string>
    <string name="app_frontpage_disclaimer">You must use the official Zotero Account syncing to use this app.</string>
    <string name="proceed">Proceed</string>
    <string name="enter_your_zotero_api_key_manually">Enter your Zotero API Key Manually</string>
    <string name="zotero_account_sync">Zotero Account Sync</string>
    <string name="pick_your_cloud_storage_provider">Pick your cloud storage provider</string>
    <string name="catalog_empty">This catalog is empty. If you believe this is an error, please refresh your library.</string>
    <string name="surname">Surname</string>
    <string name="firstname">First Name</string>
    <string name="attachments">Attachments</string>
    <string name="information">Information</string>
    <string name="notes">Notes</string>
    <string name="tags">Tags</string>
    <string name="sort_by">Sort By</string>
    <string name="submit">Submit</string>
    <string name="only_show_items_with_notes">Only show items with notes</string>
    <string name="only_show_items_with_pdf_attachments">Only show items with PDF Attachments</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="nav_header_collections">Collections</string>
    <string name="don_t_verify_ssl_certificates_insecure">Don\'t Verify SSL Certificates (Insecure)</string>
    <string name="library_loading_status">Library Loading Status</string>
    <string name="nav_menu_trash">Trash</string>
    <string name="nav_menu_my_publication">My Publications</string>
    <string name="nav_menu_unfiled_items">Unfiled Items</string>
    <string name="search_as_you_type">Search as you type</string>
    <string name="description_live_search">Turn off if your search is too slow</string>
    <string name="verify_attachment_integrity">Verify attachment integrity before opening</string>
    <string name="description_use_webdav">Use webdav to access attachments</string>
    <string name="config_webdav">Configure Webdav</string>
    <string name="description_verify_attachment_integrity">Enabling this may slow down the opening of large attachments</string>
    <string name="description_update_attachments">Offer to upload attachments</string>
    <string name="use_external_pdf_reader">Use an external pdf reader</string>
    <string name="pref_key_use_external_pdf_reader">use_external_pdf_reader</string>
    <string name="pref_key_default_external_pdf_reader">default_external_pdf_reader</string>
    <string name="default_pdf_reader">Default Pdf reader</string>
    <string name="download_all_attachments">Download all Attachments</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="webdav_address">Webdav Address</string>
    <string name="custom_zotero_storage_path">Custom zotero storage path</string>
    <string name="downloading">downloading</string>

    <string name="oK">OK</string>

    <string name="varifying_your_apikey">Verifying your api key....</string>

    <string name="please_input_zotero_apikey">Please input your zotero apikey</string>

    <string name="press_back_again_to_exit">Please press BACK again to exit</string>

    <string name="full_sync_title">Full sync</string>
    <string name="full_sync_clue">It requires a full library resync if you want to access your items. Would you like to resync your library?</string>

    <string name="description_login_with_zotero_account">You will need to login with your Zotero Account.          After your login in, make sure you scroll down and click \"Save Key\"           Once this is complete the web browser should close.</string>
    <string name="input_your_zotero_api_key">Input your zotero api key</string>
    <string name="zotero_login_description">Please select a way to login your zotero account. This application must rely on an existing zotero account, and all operations within the application are based on this account. \n\nIf you do not already have a Zotero account, please go to the official website to register yourself, or select "ZOTERO" to register in the pop-up web browser.</string>
    <string name="connecting_to_the_zotero_api">Connecting to the Zotero API···</string>
    <string name="tip_connect_to_zotero_account">If the app is stuck on this screen, it means that that there is some connection problem with Zotero\'s servers. Use the API Key method instead.Using the below url, generate an api key for Zoo to use.</string>
    <string name="error_loading_library">error loading library</string>
    <string name="got_error_message">got error message</string>
    <string name="attachment_file_not_found">could not open attachment, file not found.</string>
    <string name="error_getting_attachment">Error getting Attachment</string>
    <string name="get_attachment_internet_error">\"There was an error downloading the attachment from the Zotero Servers.\nPlease check your internet connection.</string>
    <string name="file_not_exist_on_zotero_server">The file does not exist on the Zotero server.</string>
    <string name="downloading_file">Downloading File</string>
    <string name="downloading_your_attachment">Downloading your Attachment</string>
    <string name="description_login_with_apikey">Fill in the input box above to apply for an apikey from Zotero official website, and then submit it. \nNote: It does not require entering an account password in a web browser, but please make sure to save the API key to prevent others from stealing it!</string>
    <string name="connecting_to_webdav">Connecting to WebDAV Server</string>
    <string name="test_webdav_server">We are testing your connection to the WebDAV Server.</string>
    <string name="webdav_already_configured">WebDAV is already configured.</string>
    <string name="successfully_add_webdav">Successfully added WebDAV.</string>
    <string name="error_connectint_webdav">Error connecting to webDAV server</string>
    <string name="info_error_connect_webdav">There was an error connecting to the webDAV server. Please verify the address, username and password.</string>
    <string name="unknown_collection">Unknown Collection</string>
    <string name="loading_library">Loading your library...</string>
    <string name="trash">Trash</string>
    <string name="my_publication">My publication</string>
    <string name="homepage">Home</string>
    <string name="note">Note</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="view_note">View Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="description_attachment_downloading">Here is the attachment downloading...</string>
    <string name="downloaded">Downloaded</string>
    <string name="used">used</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="calculating_attachments">Calculating your downloaded attachments...</string>
    <string name="download_manager">Download Manager</string>
    <string name="custom_storage_selected">Custom storage selected</string>
    <string name="warning_use_custom_storage">Android has imposed limitations on how the filesystem can be accessed. This will mean much slower file access compared to using the external cache option.</string>
</resources>
