<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/syncing_header">

        <ListPreference
            app:defaultValue="zoteroapi"
            app:entries="@array/sync_options_entries"
            app:entryValues="@array/sync_options_values"
            app:key="sync_method"
            app:title="@string/sync_method"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="EXTERNAL_CACHE"
            app:entries="@array/attachment_storage_location_entries"
            app:entryValues="@array/attachment_storage_location_values"
            app:key="attachment_sync_location"
            app:title="@string/setting_sync_attachments_location"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:enabled="true"
            android:key="config_storage_path"
            android:title="@string/custom_zotero_storage_path"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="attachments_uploading_enabled"
            android:title="@string/description_update_attachments" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Web DAV">
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="true"
            app:enabled="true"
            android:key="use_webdav"
            android:title="@string/description_use_webdav" />

        <Preference
            android:enabled="true"
            android:key="configure_webdav"
            android:dependency="use_webdav"
            android:title="@string/config_webdav" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/library_header">
        <ListPreference
            app:defaultValue="TITLE"
            app:entries="@array/sort_options_entries"
            app:entryValues="@array/sort_options_values"
            app:key="sort_method"
            app:title="@string/sort_method_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="should_live_search"
            android:summary="@string/description_live_search"
            android:title="@string/search_as_you_type" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="check_md5sum_before_attachment_open"
            android:summary="@string/description_verify_attachment_integrity"
            android:title="@string/verify_attachment_integrity" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="load_last_position"
            android:summary="进入应用时，默认加载上次退出应用时的位置"
            android:title="默认加载上次位置" />

    </PreferenceCategory>



    <PreferenceCategory app:title="Attachments">
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="true"
            app:enabled="true"
            android:key="@string/pref_key_use_external_pdf_reader"
            android:title="@string/use_external_pdf_reader" />
        <ListPreference
            app:defaultValue="Default"
            app:entries="@array/pdf_reader_entries"
            app:entryValues="@array/pdf_reader_value"
            app:dependency="@string/pref_key_use_external_pdf_reader"
            app:key="@string/pref_key_default_external_pdf_reader"
            app:title="@string/default_pdf_reader"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>
