<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="24dp">

            <TextView
                android:id="@+id/textView_label_sortingmethod"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_sort_by"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner_sort_by" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_sort_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:entries="@array/sort_options_entries"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_sort_order"
                app:layout_constraintStart_toEndOf="@+id/textView_label_sortingmethod"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_sort_order"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.1"
                android:padding="3dp"
                android:src="@drawable/ic_arrow_downward_24px"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_sort_by"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner_sort_by" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/checkBox_show_only_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/only_show_items_with_pdf_attachments" />

        <CheckBox
            android:id="@+id/checkBox_show_only_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/only_show_items_with_notes" />

        <LinearLayout
            android:id="@+id/lv_tag_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="按标签筛选：" />

                <Button
                    android:id="@+id/btn_clear_filters"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="16dp"
                    android:minHeight="16dp"
                    android:padding="3dp"
                    android:textSize="11dp"
                    android:layout_marginStart="8dp"
                    android:text="清空筛选"/>

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagsContainer"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleLine="true" />


        </LinearLayout>

    </LinearLayout>
</layout>